--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "url": "https://github.com/scalableminds/require-sugar/issues"
   },
   "dependencies": {
-    "path": "^0.4.9"
+    "path": "^0.4.9",
+    "source-map": "^0.1.39",
+    "through2": "^0.6.2",
+    "vinyl-sourcemaps-apply": "^0.1.3"
   },
   "devDependencies": {
     "jasmine-node": "^1.14.5",
