--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "path": "^0.4.9",
     "source-map": "^0.1.39",
     "through2": "^0.6.2",
-    "vinyl-sourcemaps-apply": "^0.1.3"
+    "vinyl-sourcemaps-apply": "^0.1.3",
+    "char-props": "^0.1.5"
   },
   "devDependencies": {
     "jasmine-node": "^1.14.5",
