--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
   "bugs": {
     "url": "https://github.com/scalableminds/require-sugar/issues"
   },
+  "bin": {
+    "require-sugar": "./bin/require-sugar"
+  },
   "dependencies": {
+    "char-props": "^0.1.5",
+    "gulp-sourcemaps": "^1.2.8",
     "path": "^0.4.9",
     "source-map": "^0.1.39",
     "through2": "^0.6.2",
-    "vinyl-sourcemaps-apply": "^0.1.3",
-    "char-props": "^0.1.5"
+    "vinyl": "^0.4.6",
+    "vinyl-sourcemaps-apply": "^0.1.3"
   },
   "devDependencies": {
     "jasmine-node": "^1.14.5",
